--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
       </select>
     </div>
     <h1 id="pageTitle">Metadata Viewer</h1>
-    <p id="description">画像を選択すると、画像プレビューとExifを含む全てのメタデータが表示されます</p>
+    <p id="description">
+      画像を選択すると、画像プレビューとExifを含む全てのメタデータが表示されます<br />
+      端末上で動作するため、画像がアップロードされることはありません。
+    </p>
 
     <!-- 画像プレビューエリア -->
     <div id="previewContainer">
