--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
     <h1 id="pageTitle">Metadata Viewer</h1>
     <p id="description">
-      画像を選択すると、画像プレビューとExifを含む全てのメタデータが表示されます<br />
+      画像を選択すると、Exifを含む全てのメタデータが表示されます。<br />
       端末上で動作するため、画像がアップロードされることはありません。
     </p>
 
@@ -126,7 +126,7 @@
     const langStrings = {
       en: {
         title: "Metadata Viewer",
-        description: "Select an image to display a preview and all metadata including EXIF.",
+        description: "Select an image to display all metadata including EXIF.",
         fileInputLabel: "Choose file",
         noMetadata: "No metadata found.",
         errorLoading: "An error occurred while loading metadata: ",
@@ -140,7 +140,7 @@
       },
       ja: {
         title: "メタデータビューワー",
-        description: "画像を選択すると、画像プレビューとExifを含む全てのメタデータが表示されます",
+        description: "画像を選択すると、Exifを含む全てのメタデータが表示されます",
         fileInputLabel: "ファイルを選択",
         noMetadata: "メタデータが見つかりませんでした。",
         errorLoading: "メタデータの読み込み中にエラーが発生しました: ",
