--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       },
       ja: {
         title: "メタデータビューワー",
-        description: "画像を選択すると、Exifを含む全てのメタデータが表示されます",
+        description: "画像を選択すると、Exifを含む全てのメタデータが表示されます。端末上で動作するため画像がアップロードされることはありません。",
         fileInputLabel: "ファイルを選択",
         noMetadata: "メタデータが見つかりませんでした。",
         errorLoading: "メタデータの読み込み中にエラーが発生しました: ",
