--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
       padding: 10px 15px;
       border-radius: 5px;
       cursor: pointer;
+      margin-bottom: 10px;
+    }
+
+    /* 追加メッセージ用 */
+    #analysisNotice {
       margin-bottom: 20px;
+      color: #ccc;
+      font-size: 0.9em;
     }
 
     table {
@@ -105,8 +112,7 @@
     </div>
     <h1 id="pageTitle">Metadata Viewer</h1>
     <p id="description">
-      画像を選択すると、Exifを含む全てのメタデータが表示されます。<br />
-      端末上で動作するため、画像がアップロードされることはありません。
+      画像を選択すると、Exifを含む全てのメタデータが表示されます。
     </p>
 
     <!-- 画像プレビューエリア -->
@@ -116,6 +122,9 @@
 
     <label id="fileInputLabel" for="imageInput">ファイルを選択</label>
     <input type="file" id="imageInput" accept="image/*">
+    <!-- 分析は端末内で実施するため、アップロードは行われませんというメッセージ -->
+    <p id="analysisNotice"></p>
+
     <div id="output">
       <div id="metadata"></div>
     </div>
@@ -128,6 +137,7 @@
         title: "Metadata Viewer",
         description: "Select an image to display all metadata including EXIF.",
         fileInputLabel: "Choose file",
+        analysisNotice: "Analysis is performed on your device; your file is not uploaded.",
         noMetadata: "No metadata found.",
         errorLoading: "An error occurred while loading metadata: ",
         libraryNotLoaded: "ExifReader library is not loaded. Please check your network connection or URL.",
@@ -140,8 +150,9 @@
       },
       ja: {
         title: "メタデータビューワー",
-        description: "画像を選択すると、Exifを含む全てのメタデータが表示されます。端末上で動作するため画像がアップロードされることはありません。",
+        description: "画像を選択すると、Exifを含む全てのメタデータが表示されます。",
         fileInputLabel: "ファイルを選択",
+        analysisNotice: "端末内で分析されるため、ファイルがアップロードされることはありません。",
         noMetadata: "メタデータが見つかりませんでした。",
         errorLoading: "メタデータの読み込み中にエラーが発生しました: ",
         libraryNotLoaded: "ExifReaderライブラリが読み込まれていません。ネットワーク接続やURLを確認してください。",
@@ -161,6 +172,7 @@
       document.getElementById('description').textContent = langStrings[currentLang].description;
       document.getElementById('fileInputLabel').textContent = langStrings[currentLang].fileInputLabel;
       document.getElementById('preview').alt = langStrings[currentLang].previewAlt;
+      document.getElementById('analysisNotice').textContent = langStrings[currentLang].analysisNotice;
 
       // 既に生成されたメタデータテーブルのヘッダー更新
       const tableHeaderRow = document.querySelector("#metadata table thead tr");
