change 日本語 to Japanese

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="languageSelectorContainer">
       <select id="languageSelector">
         <option value="en">English</option>
-        <option value="ja" selected>日本語</option>
+        <option value="ja" selected>Japanese</option>
       </select>
     </div>
     <h1 id="pageTitle">Metadata Viewer</h1>
