--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <title>Metadata Viewer</title>
   <!-- ExifReader を指定のCDNから読み込み -->
   <script src="https://cdn.jsdelivr.net/npm/exifreader@4.27.0/dist/exif-reader.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138085015-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-138085015-1');
+  </script>
+
+  <!--[if lt IE 9]>
+  <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
   <style>
     body {
       background-color: #000;
